BIS-736 : external data table for AFS : improve 2PC tests